# wasmer-go

./: BUILD  Cargo.toml  MODULE.bazel  WORKSPACE  go.mod
examples/: BUILD.bazel
examples/appendices/: BUILD.bazel
wasmer/: BUILD.bazel  cgo.go  trap.go
wasmer/packaged/lib/darwin-amd64/: BUILD.bazel
wasmer/packaged/lib/linux-aarch64/: BUILD.bazel
